[tool.poetry]
name = "my weather app"
version = "0.1.0"
description = ""
authors = ["Robert"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
plotly = "^5.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
